--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
 body{
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
 }
+
 h1,h2,h3,h4,p,a,li{
     font-size: 1rem;
     text-decoration: none;
     list-style: none;
+    color: unset;
 }
