--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,6 +1,14 @@
 .mainContainer{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     color: black;
     background-color: #F5F5F5;
+    min-height: 90vh;
+}
+
+.mainContainer h2{
+    margin: 5rem 0;
+    font-size: 2rem;
+    line-height: 2.5rem;
 }
