--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
-body{
+body, h3, li, ul, a, span, div, section{
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
