--- a/src/styles/globalStyles.module.css
+++ b/src/styles/globalStyles.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 350px;
+    padding: 0 18vw;
     height: 88px;
     font-size: 1.125rem;
     font-weight: 400;
